add external escalation section

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -34,6 +34,13 @@ If you'd like our assistance, please use one of the issue generation templates b
 
 We can also be reached in Slack in the [#production](https://gitlab.slack.com/archives/C101F3796) channel for questions related to GitLab.com and in the [#infrastructure-lounge](https://gitlab.slack.com/archives/CB3LSMEJV) channel for all other questions.
 
+### External Customer Escalations
+Assistance from the Infrastructure Team is occasionally required to help solve or troubleshoot external customer issues.
+
+1. Reach out to the [Support Team](https://about.gitlab.com/handbook/support/) to ensure that they are aware of the external customer issue.
+2. File an issue in the [Reliability Issue Tracker](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/new?issuable_template=default)
+3. Ping @reliability-ems on Slack in the #reliability-lounge channel and include a link to the newly created issue.
+
 ## Deploying changes to GitLab.com
 
 All larger features, configuration changes, and new services must go through a [Production Readiness] review.
@@ -182,5 +189,3 @@ The process is as follows:
 ### How We Work -- OKR
 
 OKRs that require status tracking should be updated each Wednesday. When updating the progress percentage of any given KR, it is not necessary to provide extensive notes. One sentence with a link to a larger update is sufficient in most cases. It is also acceptable to do a check-in without providing a note on a single occasion, but not over several check-ins.
-
-
