Remove Workspace as having far-reaching impact

--- a/development/dev/manage/workspace/index.html.md.erb
+++ b/development/dev/manage/workspace/index.html.md.erb
@@ -34,6 +34,8 @@ Because the hierarchy in GitLab, specifically on GitLab.com, can get complicated
   * The goal is to have product give engineering and design the opportunity to be involved with direction and issue definition from the very beginning.
 * We do an optional, asynchronous daily stand-up in our respective group stand-up channels:
   * Manage:Workspace [#g_manage_workspace_daily](https://gitlab.slack.com/archives/C02J4GTP38A)
+* We are using feature flags extensively. Due to the our domain and how vital it is for the GitLab workings, 
+every new major or mid-size change should be feature-flagged. 
 
 #### With our counterparts
 
