--- a/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
@@ -67,7 +67,50 @@ Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/
 ## CustomersDot End-to-End pipeline efficiency
 
 (<a href="https://app.periscopedata.com/app/gitlab/817532/CustomersDot-End-to-End-Dashboard" target="_blank">Sisense↗</a>)
-<embed width="100%" height="550" src="<%= signed_periscope_url({ dashboard: 817532, embed: 'v2'}) %>">
+
+### Success rate
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 10916864, dashboard: 817532, embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 11111156, dashboard: 817532, embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 11111389, dashboard: 817532, embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 11111428, dashboard: 817532, embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
+### Durations
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 11111438, dashboard: 817532, embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
 
 [Fulfillment section]: /handbook/product/categories/#fulfillment-section
 [Fulfillment]: /handbook/product/categories/#fulfillment-stage
