--- a/development/dev/create/editor/index.html.md.erb
+++ b/development/dev/create/editor/index.html.md.erb
@@ -3,7 +3,7 @@ layout: handbook-page-toc
 title: 'Create:Editor Team'
 description: >-
   The Editor Team is part of the Create Stage. We focus on multiple categories:
-  Remote Development, Web IDE, Content Editor, Source Editor, GitLab Pages, Snippets (deprioritized) and Wiki (deprioritized).
+  Remote Development, Web IDE, Content Editor, Source Editor, GitLab Pages, and Wiki (deprioritized).
 ---
 
 ## On this page
@@ -14,7 +14,7 @@ description: >-
 
 ## Overview
 
-The Editor Team is part of [Create Stage][hb-create] in the [Dev Sub-department][hb-dev]. We focus on multiple [categories][hb-categories]: `Remote Development`, `Web IDE`, `Content Editor`, `Source Editor`, `GitLab Pages`, `Snippets (deprioritized)`, and `Wiki (deprioritized)`.
+The Editor Team is part of [Create Stage][hb-create] in the [Dev Sub-department][hb-dev]. We focus on multiple [categories][hb-categories]: `Remote Development`, `Web IDE`, `Content Editor`, `Source Editor`, `GitLab Pages`, and `Wiki (deprioritized)`.
 
 Abbreviations used on this page:
 
@@ -49,7 +49,6 @@ The following people are permanent members of the Editor Engineering Team:
 | Web IDE  | Paul Slaughter |
 | Pages | Vishal Tak, Kassio Borges |
 | Wiki (deprioritized) | David O'Regan |
-| Snippets (deprioritized) | David O'Regan |
 
 ## ☎️ How to reach us
 
@@ -67,7 +66,6 @@ Following you will find all details how our team operates in all aspects of our 
 | Term | Meaning |
 | ---- | ------- |
 | `in context editing` | Transitioning from reading to editing without navigating to a new page |
-| `Snippets` | Small, sharable bits of code saved for easy access |
 | `Live Preview` | Preview JavaScript and static sites in real-time in the Web IDE |
 | `Wiki` | Built-in, git-backed knowledge base |
 | `Source Editor` | Source Editor is framework-agnostic and can be used in any application, including both Rails and Vue |
