Added Zuora as topic

--- a/development/fulfillment/fulfillment-platform/index.html.md.erb
+++ b/development/fulfillment/fulfillment-platform/index.html.md.erb
@@ -46,6 +46,7 @@ We want to use our Architecture Review meeting to invite other people from the [
 - Upcoming projects that need cross-group collaboration (e.g. [CustomersDot BillingAccount can have multiple CustomersDot Users](https://gitlab.com/groups/gitlab-org/-/epics/8951)).
 - Intake and proposals to enable other Fulfillment groups to be more efficient.
 - Architectural reviews and suggestions (e.g. spikes from other teams) that impact the CDot architecture.
+- Topics related to our Zuora integration. 
 
 ### Meeting routine and agenda
 
