Fix AI Assisted links

--- a/development/data-science/ai-assisted/index.html.md.erb
+++ b/development/data-science/ai-assisted/index.html.md.erb
@@ -64,7 +64,7 @@ We use an epic roadmap to track epic progress on a quarterly basis.
 
 ### Issue boards
 
-We use a [team specific issue board](https://gitlab.com/groups/gitlab-org/modelops/applied-ml/review-recommender/-/boards/3537332?label_name[]=applied%20ml%3A%3Areviewer-recommender&label_name[]=devops%3A%3AModelOps&label_name[]=group%3A%3Aapplied%20ml) to track issue progress on a daily basis. Issue boards are our single source of truth for the status of our work. Issue boards should be viewed at the highest group level for visibility into all nested projects in a group. Currently as the team is working on Suggested Reviewer as a feature we have a single board.
+We use a [team specific issue board](https://gitlab.com/groups/gitlab-org/modelops/applied-ml/review-recommender/-/boards/3537332?label_name[]=group%3A%3Aai%20assisted) to track issue progress on a daily basis. Issue boards are our single source of truth for the status of our work. Issue boards should be viewed at the highest group level for visibility into all nested projects in a group. Currently as the team is working on Suggested Reviewer as a feature we have a single board.
 
 
 ### Iteration
