Updating index.html.md.erb for PDI Dashboards, Analysis, & Insights handbook page to include additional analysis

--- a/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
+++ b/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
@@ -40,8 +40,8 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Feature Retention 2.0](https://app.periscopedata.com/app/gitlab/1003214/Feature-Retention) | View event-level adoption and retention for SaaS and Self-Managed.| FY23 Q4 | N |
 | [GMAU Crossover](https://app.periscopedata.com/app/gitlab/1061102/GMAU-Crossover) | To provide visibility into how GMAUs may be impacted by the use of other GMAUs.| FY23 Q3 | N |
 | [Time to First Adoption](https://app.periscopedata.com/app/gitlab/1088268/Time-to-First-Adoption)| By plan-level, see the days till inital adoption of all SaaS events.| FY23 Q4 | N |
-
-
+| [SaaS Purchase Funnel](https://app.periscopedata.com/app/gitlab:safe-dashboard/1022191/Saas-purchase-flow-funnel-(all-views-to-checkout-page))| Purchase funnel for SaaS subscriptions.| FY23 Q2 | Y |
+| [Self-Managed Purchase Funnel via Customer Portal](https://app.periscopedata.com/app/gitlab:safe-dashboard/1019118/Subscription-purchase-flow-for-Customer-Portal)| Purchase funnel for Self-Managed subscriptions through Customer portal| FY23 Q2 | Y |
 
 ### Analysis & Insights
 
@@ -57,3 +57,5 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Quality SaaS Signup Metric 2022](https://docs.google.com/presentation/d/1xHBrnvwdMxQGqmX0TtcQz5tUYsAeU6CAMnpcDlhHUpc/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to narrow down to a subset of the Gitlab.com user population with a higher likelihood of converting to paid. | FY23 Q3 | 
 | [SaaS Team Activation Metric 2022](https://docs.google.com/presentation/d/1rJG8FaqEjfgA-Nz9Ww3blgcUwRGzri7CeKkn1e2eEHY/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to identify team actions performed in the 1st 14 days that are predictive of paid conversion and retention. | FY23 Q4 | 
 | [Delayed Value Analysis](https://gitlab.com/gitlab-data/product-analytics/-/issues/781#note_1153295255) | Studies key feature usage among Trial-to-Paid conversions and presents how trial feature adoption expedites paid feature adoption.| FY23 Q4 |
+| [SaaS & Self-Managed Purchase Funnel Analysis Overview](https://docs.google.com/presentation/d/1OGRGCia7cmXRELBmYV3-b59tmonmAQgOCPXMZ91qw5Y/edit#slide=id.g120637fa0fc_0_0) | Deep dive analysis with multiple insights for SaaS & Self-Managed purchase funnel| FY23 Q2 |
+
