Add fdegier to AI assist team

--- a/development/data-science/ai-assisted/index.html.md.erb
+++ b/development/data-science/ai-assisted/index.html.md.erb
@@ -37,6 +37,7 @@ The following people are permanent members of the AI Assisted Group:
 | --- | --- |
 | [Alexander Chueshev](https://about.gitlab.com/company/team/#achueshev) | Senior backend engineer |
 | [Bruno Cardoso](https://about.gitlab.com/company/team) | Senior backend engineer |
+| [Fred de Gier](https://gitlab.com/fdegier) | Staff Incubation Engineer | 
 | [Tan Le](https://about.gitlab.com/company/team) | Senior Fullstack engineer |
 | [Monmayuri Ray](https://about.gitlab.com/company/team/#mon) | Engineering Manager |
 | [Taylor McCaslin](https://about.gitlab.com/company/team/#tmccaslin) | Principal Product Manager |
