Apply 1 suggestion(s) to 1 file(s)

--- a/infrastructure/team/reliability/datastores-postgres.html.md.erb
+++ b/infrastructure/team/reliability/datastores-postgres.html.md.erb
@@ -2,7 +2,7 @@
 To support, maintain, and improve services related to our [PostgreSQL datastores](https://about.gitlab.com/handbook/engineering/infrastructure/production/architecture/#database-architecture).
 
 ## Vision
-In support of our mission we'll increase the amount orchastration and automation used in order to reduce toil and make projects more [boring](https://about.gitlab.com/handbook/teamops/decision-velocity/#boring-solutions).
+In support of our mission we'll increase the amount of orchestration and automation used in order to reduce toil and make projects more [boring](https://about.gitlab.com/handbook/teamops/decision-velocity/#boring-solutions).
 
 ## Ownership
 
