Renaming filename in tree

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -63,7 +63,7 @@ If you have a question or concern and need to speak with the Security Team, you 
 #### Accounts and Passwords
 
 1. Read and follow the requirements for handling passwords and other credentials in
-  the [GitLab Password Procedure](/handbook/security/password-procedure.html) below
+  the [GitLab Password Standards](https://about.gitlab.com/handbook/security/password-standard.html) 
   for all accounts used to conduct GitLab related work.
   Using 1Password to [generate and store] the passwords is strongly recommended.
 1. Set up your [Okta](/handbook/business-ops/okta/) account at https://gitlab.okta.com,
@@ -278,7 +278,7 @@ You can then choose to use this new service account via the option under **Advan
 
 ### GitLab Password Policy Guidelines
 
-Passwords are one of the primary mechanisms that protect GitLab information systems and other resources from unauthorized use. Constructing secure passwords and ensuring proper password management is essential. GitLab's [password procedures](/handbook/security/password-procedure.html) are based, in part, on the recommendations by [NIST 800-63B](https://pages.nist.gov/800-63-3/sp800-63b.html). To learn what makes a password truly secure, read this [article](https://medium.com/peerio/how-to-build-a-billion-dollar-password-3d92568d9277) or watch this [conference presentation](https://www.youtube.com/watch?v=vudZnjp5Uq0&t=19183) on password strength.
+Passwords are one of the primary mechanisms that protect GitLab information systems and other resources from unauthorized use. Constructing secure passwords and ensuring proper password management is essential. GitLab's [password standards](https://about.gitlab.com/handbook/security/password-standard.html) are based, in part, on the recommendations by [NIST 800-63B](https://pages.nist.gov/800-63-3/sp800-63b.html). To learn what makes a password truly secure, read this [article](https://medium.com/peerio/how-to-build-a-billion-dollar-password-3d92568d9277) or watch this [conference presentation](https://www.youtube.com/watch?v=vudZnjp5Uq0&t=19183) on password strength.
 
 
 ### 1Password Guide
@@ -556,7 +556,7 @@ which you can share with up to 5 family members.
 
 #### Two Factor Authentication and Time-based One Time Passwords
 
-As stated in the [GitLab Password Procedure](/handbook/security/password-procedure.html), all GitLab team-members should use two factor authentication (2FA) whenever possible.
+As stated in the [GitLab Password Standards](/handbook/security/password-standard.html), all GitLab team-members should use two factor authentication (2FA) whenever possible.
 
 1Password provides an alternative solution that does not
 require using your smartphone: 1Password Time-based One Time Passwords
