--- a/development/index.html.md.erb
+++ b/development/index.html.md.erb
@@ -136,7 +136,7 @@ In addition to the [company-wide calibration preparation](https://about.gitlab.c
 1. Status of maintainership
 2. Most recent talent assessment 
 
-We use a [peer review process](/handbook/engineering/development/promotion-process/) to collaborate on proposed promtions.
+We use a [peer review process](/handbook/engineering/development/promotion-process/) to collaborate on proposed promotions.
 
 ### Talent Assessment Process
 
@@ -150,7 +150,7 @@ Company-wide guidelines on the Talent Assessment can be found [here](https://abo
 
 We will be reviewing outliers for Performance/Growth Potential and anyone identified as Key Talent for calibration this cycle. Formal calibration will take place at the Senior Manager, Director, and VP levels. The thought process around who qualifies as an "outlier" for Performance and Growth Potential [is outlined here](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
 
-Calibration and assesment are two different steps in the process. The assessment phase is the process of assessing each team member to determine their Performance and Growth Potential, whereas the calibration phase (occurring after initial assessments are made) is when management calibrates across the stage/org/level/etc. to discuss and align on assessments. Every team member should be assessed and have supporting points to justify those assessments - but to make calibration sessions more focsued and scalable, we focus on [outliers](/handbook/people-group/talent-assessment/#who-do-i-calibrate). 
+Calibration and assessment are two different steps in the process. The assessment phase is the process of assessing each team member to determine their Performance and Growth Potential, whereas the calibration phase (occurring after initial assessments are made) is when management calibrates across the stage/org/level/etc. to discuss and align on assessments. Every team member should be assessed and have supporting points to justify those assessments - but to make calibration sessions more focused and scalable, we focus on [outliers](/handbook/people-group/talent-assessment/#who-do-i-calibrate).
 
 For Development specifically, we will calibrate:
 
@@ -182,7 +182,7 @@ In addition to the [calibration session pre work](https://about.gitlab.com/handb
 
 1. Key Talent assessment need to be completed and added to the session agenda doc at least 3 business days before the live calibration session. 
 
-  - If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughtly ~10% of the entire population. In Development, we will be calibrating Key Talent from the Senior Manager level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent), meaning that while *everyone in the organization is eligible to be identified as Key Talent*, Senior Managers+ will be will be calibrating and making these final decisions. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization. 
+  - If an individual is indicated as key talent, an explanation should be added to indicate how this individual qualifies as key talent against our [key talent definition](/handbook/people-group/talent-assessment/#key-talent). Reminder that the bar for key talent is set high, and that key talent makes up roughly ~10% of the entire population. In Development, we will be calibrating Key Talent from the Senior Manager level and above [aligned with guidelines](/handbook/people-group/talent-assessment/#process-to-determine-key-talent), meaning that while *everyone in the organization is eligible to be identified as Key Talent*, Senior Managers+ will be will be calibrating and making these final decisions. The rationale behind this decision is that is important to have a holistic view of all team members when determining who meets the key talent criteria, which is why we require a certain scope when assessing key talent in the organization.
 
 While calibrations and ultimate determinations will take place at Senior Manager+ level, inital recommendations begin in Workday and sit with team member's direct managers aligned with the [process](https://about.gitlab.com/handbook/people-group/talent-assessment/#process-to-determine-key-talent)
 
@@ -269,7 +269,7 @@ We do this to ensure that the team responsible for that area of the code base is
 
 #### Architectural Collaboration
 
-At times when cross-functional, or cross-departmental architectural collaboration is needed, the [GitLab Architecute Evolution Workflow](/handbook/engineering/architecture/) should be followed. 
+At times when cross-functional, or cross-departmental architectural collaboration is needed, the [GitLab Architecture Evolution Workflow](/handbook/engineering/architecture/) should be followed.
 
 #### Decisions requiring approvals
 
@@ -389,7 +389,7 @@ We track Engineering Allocation [roadmaps](https://gitlab.com/groups/gitlab-org/
 
 #### Team allocation measurement
 
-Each team needs to demonstrate how there allocation is being used.  This is done to verify we are not over/under investing for a given initaitive.  This can be done via assignment (people assigned to work) and/or issues assigned.  We will track [issues and MRs](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/11340) and see as a percentage how that compares to the overall teams work.  
+Each team needs to demonstrate how their allocation is being used.  This is done to verify we are not over/under investing for a given initiative.  This can be done via assignment (people assigned to work) and/or issues assigned.  We will track [issues and MRs](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/11340) and see as a percentage how that compares to the overall teams work.
 
 ### Ownership of Shared Services and Components
 
