Add consideration of channel partner strategy to product processes

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -17,7 +17,7 @@ description: >-
 ## Our Product Process
 
 As a Product Organization, we work to create a flexible yet concise product development framework for developing products that customers love and value. The [Product Principles](/handbook/product/product-principles/) section is where you can learn about our strategy and philosophy regarding product development, here we discuss the processes we use tactically.
-
+c
 ### Team Meetings
 
 Below you'll find overviews for team meetings designed to boost Product team knowledge, communication, and collaboration. Our goal is to have minimal but valuable sync meetings for the Product team. All sync Product team meetings are required to have agendas and recordings that support async collaboration. We encourage any Product team member to propose a new meeting or the re-design of an existing meeting to help drive or improve collaboration amongst the Product team in an effort to drive more product value for our users. 
@@ -473,6 +473,10 @@ In general, you should:
 
 <%= partial "includes/usecase-competitive-content.md" %>
 
+## Go to market considerations
+
+When working on the release of larger features or new capabilities, it is important the product manager consider various aspects of the go to market plan and  inform or partner with the appropriate stable counterparts for strategic and logistical considerations. 
+
 ### Marketing materials
 
 As a PM you're responsible for making sure changes you've shipped are well represented
@@ -511,9 +515,7 @@ It's important to keep [`features.yml`](https://gitlab.com/gitlab-com/www-gitlab
 
 ### Major feature rollout
 
-Major features deserve proper attention from Product and Marketing. With a
-proper rollout, we'll have ample marketing opportunities and receive more
-feedback ahead of, during, and after the release.
+Major features deserve proper attention from Product and Marketing. With a proper rollout, we'll have ample marketing opportunities and receive more feedback ahead of, during, and after the release.
 
 Here is the ideal rollout schedule. For each step there is an indication for
 who is responsible for it.
@@ -536,6 +538,18 @@ who is responsible for it.
     - Pricing page is updated if needed
 1. Feature is highlighted in a blog post (Marketing)
     - This post is linked from the feature page on the website (if applicable)
+
+### Channel partner strategy
+
+Major features and new capabilities may also benefit from early collaboration with our Partner Programs team using the [Channel Program Engagement Process](https://about.gitlab.com/handbook/sales/channel/channel-programs-ops/#channel-program-engagement-process) and [Partner Communications.](https://about.gitlab.com/handbook/sales/channel/channel-programs-ops/#partner-communications)
+
+It is recommended that product managers inform the channel partner team early on in planning or what would be comparable to the  [design phase](https://about.gitlab.com/handbook/product-development-flow/#validation-phase-3-design) for a large feature or new capability. The channel partner team will then lean in to understand the benefits of the upcoming larger-scale release and determine if they need to collaborate with product management more directly to activate any related partner strategies/tactics. It is important to create/document strategy and gain alignment before moving to the execution phase of feature release ([see build track](https://about.gitlab.com/handbook/product-development-flow/#build-track)) and broader go-to-market plans. 
+
+Below are examples of how product management and channel partner teams collaborated on GitLab Dedicated. This is a recommended documentation approach for product managers and partner channel teams to follow, but can be personalized by the collaborators as needed. 
+
+1. Product management and channel partner teams collaborated to identify opportunities where channel partners could add complementary services or help grow adoption of the new offering. The output of this collaboration was documenting the channel partner strategy through a [series of slides](https://docs.google.com/presentation/d/10_isdGHMHiRTd8h1jQWuxnl3ABYl4mWcTak9V8JLbv4/edit#slide=id.gcad4b6bd68_6_0).
+2. Once these slides were revierwed/approved by all necessary [stakeholders](https://about.gitlab.com/handbook/product/product-processes/#what-is-a-stakeholder), the strategy was documented in the [handbook](https://about.gitlab.com/direction/saas-platforms/dedicated/#channel-partner-role-in-gitlab-dedicated)
+3. Then, a series of [epics/issues](https://gitlab.com/groups/gitlab-com/gl-infra/gitlab-dedicated/-/epics/1) were created to track implementation of the agreed upon plan. 
 
 ### Release posts
 
