Add rally workload link to search team page

--- a/development/enablement/data_stores/search/index.html.md.erb
+++ b/development/enablement/data_stores/search/index.html.md.erb
@@ -132,6 +132,10 @@ When onboarding domain experts from other groups to help cover production incide
 ### JTBD
 We utilize the Jobs to be Done (JTBD) framework to better understand our customers' and users' needs. You can view the current list of our JTBD [here](/handbook/engineering/development/enablement/search/jtbd/#jobs-to-be-done).
 
+### Performance Testing
+
+We are exploring [Rally](https://esrally.readthedocs.io) for performance testing the Elasticsearch cluster. Workload data is determined using Kibana and stored in a [Google Sheet](https://docs.google.com/spreadsheets/d/1K_MteuTEX0spu0jOiRt9BqDLZXywUhQ9NUw7PbU8odw/edit?usp=sharing) (internal)
+
 ## Resources
 
 ### Documentations
