--- a/development/sec/secure/dynamic-analysis/index.html.md.erb
+++ b/development/sec/secure/dynamic-analysis/index.html.md.erb
@@ -53,10 +53,14 @@ The Dynamic Analysis group at GitLab is charged with developing solutions which 
 
 ## How to Contact Us
 
-- Slack channel: #g_secure-dynamic-analysis
+- Slack channel: #g_secure-dynamic-analysis, #f_secure-api-security, #f_secure-fuzz-testing
 - Slack alias: @secure_dynamic_analysis_be
 - Google groups: dynamic-analysis-be@gitlab.com
 - GitLab mention: @gitlab-org/secure/dynamic-analysis-be
+
+### Other Contact
+
+The DAST team also monitors #s_secure and #sec-section. Both these channels are for wider Secure topics, however are a good place to start if you are not sure which group in Secure to contact. 
 
 ## How We Work
 
@@ -89,6 +93,10 @@ if we determine it contains valuable updates for customers and it passes our CI 
 An assigned backend engineer reviews upstream updates at least monthly to identify new bug fixes or features.
 Those changes are presented to the Product Manager for prioritization into DAST.
 
+#### New DAST Technologies
+
+The DAST analyzer is migrating towards using exclusively a browser-based DAST tool that is being built by GitLab. The tool has internally been referrred to as Browserker. Browser based DAST was released as GA in 15.7. The browser-based DAST is being delivered iteratively, with each new iteration taking over some parts of analysis previously done by ZAP, with the eventual goal of deprecating ZAP completely. 
+
 ### Fuzzing Technologies
 
 - The API Security product is built using mostly C# with some small amounts of Python. Our engineers use Windows VMs for development.
@@ -107,9 +115,8 @@ Our goals is to simplify and reduce as many of the steps that a customer needs t
 We use additional labels to categorize different areas of the application.
 
 ```
-~"dast::browserker" 
-~"dast::peach api" 
-~"dast::zap"
+~"Category:API Security" 
+~"Category:DAST" 
 ```
 
 For fuzzing we use the following labels.
@@ -188,3 +195,5 @@ GitLab uses [error budgets to track availability](https://about.gitlab.com/handb
 - [Dynamic Analysis Delivery Workflow Board](https://gitlab.com/groups/gitlab-org/-/boards/554644?scope=all&utf8=%E2%9C%93&state=opened&label_name%5B%5D=group%3A%3Adynamic%20analysis&label_name%5B%5D=devops%3A%3Asecure)
 - [Dynamic Analysis Planning Board](https://gitlab.com/groups/gitlab-org/-/boards/1229233?label_name%5B%5D=group%3A%3Adynamic%20analysis)
 - [Dynamic Analysis EM Board](https://gitlab.com/groups/gitlab-org/-/boards/1353832?scope=all&utf8=%E2%9C%93&state=opened)
+- [CWE Board](https://gitlab.com/groups/gitlab-org/-/boards/2838626) 
+- [CWE Workflow Board](https://gitlab.com/groups/gitlab-org/-/boards/2838631) 
