Add Scalability:Projections capacity planning rotation to May

--- a/infrastructure/team/scalability/projections.html.md.erb
+++ b/infrastructure/team/scalability/projections.html.md.erb
@@ -38,6 +38,27 @@ the label of `Saturation Metrics`.
 
 #### Capacity Planning Triage Rotation
 
+| Week starting | Person |
+| --- | --- |
+| 2023-01-09 | Sean |
+| 2023-01-16 | Sean |
+| 2023-01-23 | Sean |
+| 2023-01-30 | Stephanie |
+| 2023-02-06 | Stephanie |
+| 2023-02-13 | Stephanie |
+| 2023-02-20 | Bob |
+| 2023-03-06 | Bob |
+| 2023-03-13 | Hercules |
+| 2023-03-20 | Hercules |
+| 2023-03-27 | Bob |
+| 2023-04-03 | Hercules |
+| 2023-04-10 | Matt |
+| 2023-04-17 | Matt |
+| 2023-04-24 | Matt |
+| 2023-05-01 | Rachel |
+| 2023-05-08 | Rachel |
+| 2023-05-15 | Rachel |
+
 The responsibility for reviewing Tamland reports rotates between team members and includes the Engineering Manager. 
 
 The rotation is arranged alphabetically by first name and lasts for a minimum of three weeks. There is flexibility in the schedule to allow for OOO and on-call responsibilities. 
