Monitor:Respond Exciting things and accomplishments: December

--- a/development/ops/monitor/respond/index.html.md.erb
+++ b/development/ops/monitor/respond/index.html.md.erb
@@ -15,9 +15,9 @@ The **Respond** group at GitLab is responsible for building tools that enable De
 
 ## Exciting things and accomplishments
 This section details the happenings within the Respond group. At any given time this section will have the top exciting things and/or accomplishments of the team.
-1. We welcomed two new team members to the Respond group; [Paulina Sedlak-Jakubowska](https://gitlab.com/psjakubowska) (Frontend Engineer) and [Kristen Cutler](https://gitlab.com/kristencutler) (Backend Engineer).
-1. We re-arranged the left hand navigation for [Incident Management](https://docs.gitlab.com/ee/operations/incident_management/) Documentation.
-1. We had a record high GMAU (group monthly active users) for the month of October.
+1. GitLab's SIRT (Security Incident Response Team) [transitioned from using issue to incidents](https://gitlab.com/gitlab-com/gl-security/security-operations/sirt/projects/-/issues/51).
+1. We published a new blog post; [Visual guide to incident metrics](https://about.gitlab.com/blog/2023/01/09/visualizing-incident-management-metrics/).
+1. Marcin made changes to our incident documentation to follow the CTRT (Concept, Task, Reference, Troubleshooting) format.
 
 ## Peformance Indicators
 The Respond Group’s mission is to decrease the frequency and severity of incidents. By helping our users respond to alerts and incidents with a streamlined workflow, and capturing useful artifacts for feedback and improvement, we can accomplish our mission. To get started, we need to establish an initial user base that we can learn from to improve and further grow the Monitor stage. We have prioritized the Incident Management category to obtain this usage. 
